Image error Solve

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
                 <div class="Profile">
                     <div class="image">
-                        <img src="/IMG_20230510_122820.jpg">
+                        <img src="Img/IMG_20230510_122820.jpg">
                     </div>
                     <div class="name">
                         <h2>Saurabh Kumar Jha <br> <span>Web Developer</span></h2>
